clusters/cluster0/kubernetes/apps/media/booklore/app/booklore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: booklore
  name: booklore
  namespace: media
spec:
  template:
    metadata:
      labels:
        app: booklore
    spec:
      # nodeSelector:
      #   kubernetes.io/hostname: worker-03
      containers:
        - name: mariadb
          image: lscr.io/linuxserver/mariadb:11.4.8
          imagePullPolicy: Always
          volumeMounts:
          - name: mariadb-config
            mountPath: /config
          resources:
            requests:
              memory: 300Mi
              cpu: 150m
            limits:
              memory: 1500Mi
              cpu: 500m
        - name: booklore
          image: ghcr.io/booklore-app/booklore:latest
          imagePullPolicy: Always
          ports:
          - name: booklore-port
            containerPort: 6060
            protocol: TCP
          volumeMounts:
          - name: booklore-data
            mountPath: /app/data
          - name: booklore-bookdrop-pvc
            mountPath: /bookdrop
          - name: books
            mountPath: /ebooks
          resources:
            requests:
              memory: 500Mi
              cpu: 150m
            limits:
              memory: 4Gi
              cpu: "2"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: mariadb-config
        persistentVolumeClaim:
          claimName: "booklore-mariadb-pvc"
      - name: booklore-data
        persistentVolumeClaim:
          claimName: "booklore-data-pvc"
      - name: booklore-bookdrop-pvc
        persistentVolumeClaim:
          claimName: "booklore-bookdrop-pvc"
      - name: books
        persistentVolumeClaim:
          claimName: booklore-nfs-pvc
  selector:
    matchLabels:
      app: booklore
