clusters/cluster0/kubernetes/apps/media/booklore/app/booklore-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: booklore
  namespace: media
spec:
  hostnames:
  - booklore.biggs.dog
  parentRefs:
  - name: booklore
  rules:
  - backendRefs:
    - name: booklore-service
      port: 6060
    matches:
    - path:
        type: PathPrefix
        value: /
